fix(a11y): colour contrast, disabled buttons (PR #583 Fixes #574)

--- a/src/renderer/assets/styles/app.css
+++ b/src/renderer/assets/styles/app.css
@@ -33,7 +33,6 @@ button {
     height: 30px;
     width: 30px;
     fill: black;
-    opacity: 0.75;
     margin: 3px;
     cursor: pointer;
 
